# evolution-of-todo

./: .gitignore  CLAUDE.md  README.md
.claude/: settings.local.json
.history/implementation/: phase-i-complete.md
.history/records/: phase-i-completion.record.md
.specify/memory/: constitution.md
aiops/kagent/: requirements.txt  server.py  tools.py
aiops/kubectl-ai/: config.yaml  examples.md
backend/: .dockerignore  .env  .env.example  README.md  pyproject.toml
backend (example)/: .env  CLAUDE.md  pyproject.toml
backend (example)/app/: main.py
backend/app/: main.py
backend/app/ai/: __init__.py  agent.py  models.py  sessions.py  tools.py
backend/app/core/: config.py  database.py  db.py
backend/app/models/: auth.py  task.py
backend/app/routes/: auth.py  chat.py  tasks.py
backend/app/services/: tasks.py
backend/backend/: test_security.py
backend/backend/app/: main.py
backend/history/prompts/phase-ii/: 001-backend-security-implementation.implementation.prompt.md
backend/tests/: test_db_connection.py
backend/tests/integration/: __init__.py
frontend/: .env.example  CLAUDE.md  README.md  package.json
frontend example/: package-lock.json  package.json
frontend example/app/: globals.css
frontend example/components/: AIChat.tsx
frontend example/lib/: auth-client.ts  auth.ts
scripts/: build-images.sh
todo-app/: .gitignore  README.md  main.py  pyproject.toml
todo-app/history/prompts/phase-i/: 004-phase-i-implementation.implementation.prompt.md
todo-app/src/todo_app/: __init__.py  manager.py  models.py  storage.py  ui.py
(+100 files in other folders)
