[project]
name = "todo-app"
version = "1.0.0"
description = "A beautiful terminal-based Todo application with rich UI"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Todo App Team", email = "todo@example.com"}
]
keywords = ["todo", "task", "terminal", "cli", "rich", "productivity"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "rich>=14.3.0",
]

[project.scripts]
todo = "todo_app.ui:main"
